[package]
name = "sens"
version = "0.1.0"
authors = ["buckn <nathanieljbuck7@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { git = "https://github.com/hecrj/iced" }
lib_sens = "0.1.1"
azul = { git = "https://github.com/maps4print/azul" }
gtk = "^0.6.0"
relm = "^0.16.0"
relm-derive = "^0.16.0"
env_logger = "0.7.1"
