[package]
name = "sens"
version = "0.1.0"
authors = ["buckn <nathanieljbuck7@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lib_sens = "0.1.3"
web-view = "0.6.0"
serde_derive = "1.0.104"
serde_json = "1.0.48"
serde = "1.0.104"
